--- a/devel.cfg
+++ b/devel.cfg
@@ -16,6 +16,7 @@ extends =
 	
 develop =
     src/zchl.policy
+    src/zchl.basetheme
 
 always-checkout = true
 auto-checkout =
@@ -31,6 +32,7 @@ eggs +=
     Products.PDBDebugMode
     plone.app.debugtoolbar
     sauna.reload
+    zchl.basetheme
     z3c.deadlockdebugger
     zchl.policy
 
