--- a/versions.cfg
+++ b/versions.cfg
@@ -25,6 +25,7 @@ Products.DocFinderTab = 1.0.5
 Products.PrintingMailHost = 0.7
 Products.PDBDebugMode = 1.3.1
 ipython = 1.1.0
+collective.autopermission = 1.0b2
 plone.app.debugtoolbar = 1.0a3
 readline = 6.2.4.1
 sauna.reload = 0.5.1
