--- a/devel.cfg
+++ b/devel.cfg
@@ -1,5 +1,6 @@
 [buildout]
 parts =  
+    # python-ldap
     instance
     zopepy
     checkversions
@@ -17,6 +18,7 @@ extends =
 develop =
     src/zchl.policy
     src/zchl.basetheme
+    src/zchl.shop
 
 always-checkout = true
 auto-checkout =
@@ -35,6 +37,7 @@ eggs +=
     zchl.basetheme
     z3c.deadlockdebugger
     zchl.policy
+    zchl.shop
 
 [instance]
 <= instance-base
