--- a/base.cfg
+++ b/base.cfg
@@ -1,5 +1,6 @@
 [buildout]
 parts =  
+    # python-ldap
     lxml
     instance-base
     zopepy
@@ -33,6 +34,13 @@ always-checkout = true
 
 [sources]
 vs.policy = git git://github.com/veit/vs.policy.git
+
+[python-ldap]
+recipe = zc.recipe.egg:custom
+eggs = python-ldap == 2.4.13
+find-links =
+include-dirs = /usr/include /usr/lib/sasl2
+library-dirs = /usr/lib
 
 [lxml]
 recipe = z3c.recipe.staticlxml
