--- a/base.cfg
+++ b/base.cfg
@@ -37,7 +37,7 @@ vs.policy = git git://github.com/veit/vs.policy.git
 
 [python-ldap]
 recipe = zc.recipe.egg:custom
-eggs = python-ldap == 2.4.13
+eggs = python-ldap
 find-links =
 include-dirs = /usr/include /usr/lib/sasl2
 library-dirs = /usr/lib
