--- a/versions.cfg
+++ b/versions.cfg
@@ -40,6 +40,30 @@ ZopeSkel = 3.0b3
 templer.plone = 1.0b4
 templer.dexterity = 1.0a1
 
+# Required by:
+# Products.PloneLDAP==1.2
+Products.LDAPMultiPlugins = 1.14
+
+# Required by:
+# Products.PloneLDAP==1.2
+Products.LDAPUserFolder = 2.26
+
+# Required by:
+# plone.app.ldap==1.3.1
+Products.PloneLDAP = 1.2
+
+# Required by:
+# Products.LDAPUserFolder==2.26
+dataflake.fakeldap = 1.1
+
+# Required by:
+# zchl.policy==1.0
+plone.app.ldap = 1.3.1
+
+# Required by:
+# Products.LDAPUserFolder==2.26
+python-ldap = 2.4.14
+
 #Required by:
 #ZopeSkel 3.0b3
 #templer.plone 1.0b4
